--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: My Docs
+site_name: ' '
 edit_uri: https://github.com/hannesdelbeke/wiki_template/blob/main/notes  # root folder containing the notes on main branch, used for the edit button
 site_url: https://hannesdelbeke.github.io/wiki/  # ensure why this is needed
 repo_url: https://github.com/hannesdelbeke/wiki_template
