--- a/.github/workflows/build-and-deploy-gh-pages.yml
+++ b/.github/workflows/build-and-deploy-gh-pages.yml
@@ -3,6 +3,10 @@ on:
   push:
     branches:
       - mkdocs
+      
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+  
 jobs:
   deploy:
     runs-on: ubuntu-latest
