--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: ' '
+site_name: 'Tech-Artists Org Wiki'
 edit_uri: https://github.com/techartorg/TAO-Wiki/blob/main/notes  # root folder containing the notes on main branch, used for the edit button
 site_url: https://https://techartorg.github.io/TAO-Wiki/  # ensure why this is needed
 repo_url: https://github.com/techartorg/TAO-Wiki
