--- a/.github/workflows/build-and-deploy-gh-pages.yml
+++ b/.github/workflows/build-and-deploy-gh-pages.yml
@@ -1,8 +1,7 @@
 name: build & deploy
 on:
   push:
-    branches:
-      - mkdocs
+    branches: [mkdocs]
       
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
